2000-03-13  James Henstridge  <james@daa.com.au>

	* pyglade/__init__.py: remove python-1.4 ni stuff, and put in a
	warning message that you should think of switching over to libglade.

	* pygtk.spec: incremented version number.  Code gtk+ dependency into
	spec file.  Made auxillary packages depend on the pygtk package of
	the same version.

	* configure.in: incremented version number.  Incremented minimum
	required GTK+ so that when threading is compiled in we don't get
	problems caused by using old buggy versions of GTK+.

	* gtkmodule.c (PyGdkWindow_PropertyChange): fixed the 32 bit data
	part of the case statement correctly this time :)

2000-03-08  James Henstridge  <james@daa.com.au>

	* gtkmodule.c (PyGdkWindow_PropertyChange): fixed up problem in
	property_change method that could cause a crash if data of
	size 16 or 32 was set.
	(PyGtkStyleHelper_SetItem): added missing return that could cause
	a fallthrough to the g_assert_not_reached() call when setting a
	bg_pixmap element on a GtkStyle.

2000-03-03  James Henstridge  <james@daa.com.au>

	The following is from Paul Clifford <paul@plasma.demon.co.uk>

	* libglade.py (GladeXML.signal_autoconnect): pass all the extra
	arguments to autoconnect.

	* libglademodule.c (connect_many): don't exit if the handler is
	a tuple instead of a function.

	The following fixes are from John Ehresman <jpe@archaeopteryx.com>
	
	* gtk.py (GtkWidget.set_scroll_adjustments): return the value to
	user.

	* gtkmodule.c (GtkArg_AsPyObject): check if GtkObject is not NULL.
	(_wrap_gtk_clist_get_pixmap, _gtk_clist_get_pixtext): check that
	returned pixmap is not NULL.
	(_wrap_gtk_ctree_node_get_pixmap, _gtk_ctree_node_get_pixtext): check
	that returned pixmap is not NULL.

	* gtk.py (GtkToolbar): wrap callbacks when inserting a toolbar item.
	(GtkNotebook.set_menu_label_text): fixed typo
	(GtkTreeItem.__getattr__): wrap subtree attribute.

2000-03-01  Frederic Gobry  <gobry@lith.di.epfl.ch>
