@@ -18,16 +18,19 @@ stamp.h
 version.h
 config.h.in
 .exrc
-gnome-config
 install-sh
 missing
 mkinstalldirs
+depcomp
 INSTALL
 intl
 ABOUT-NLS
 py-compile
+.deps
+.libs
 *_defs.c
 *_impl.c
 *.pyc
 *.pyo
-.deps
+*.lo
+*.la
