@@ -1,53 +1,56 @@
+AUTOMAKE_OPTIONS = 1.4a
+
 SUBDIRS = generate pyglade
 
-INCLUDES= $(PYTHON_INCLUDES) $(PYTHON_CFLAGS) $(GTK_CFLAGS) \
-	$(GDK_IMLIB_CFLAGS) $(GTKGL_CFLAGS) $(LIBGLADE_CFLAGS)
+INCLUDES= $(PYTHON_INCLUDES) $(GTK_CFLAGS) $(GDK_IMLIB_CFLAGS) \
+	$(GTKGL_CFLAGS) $(LIBGLADE_CFLAGS)
 
 if BUILD_IMLIB
-imlib_libs = _gdkimlibmodule$(SO)
+imlib_libs = _gdkimlibmodule.la
 imlib_mods = GdkImlib.py
 else
 imlib_libs =
 imlib_mods =
 endif
 if BUILD_GTKGL
-gtkgl_libs = _gtkglmodule$(SO)
+gtkgl_libs = _gtkglmodule.la
 gtkgl_mods = gtkgl.py
 else
 gtkgl_libs =
 gtkgl_mods =
 endif
 if BUILD_LIBGLADE
-libglade_libs = _libglademodule$(SO)
+libglade_libs = _libglademodule.la
 libglade_mods = libglade.py
 else
 libglade_libs =
 libglade_mods =
 endif
 
-pyexec_PROGRAMS = _gtkmodule$(SO) $(imlib_libs) $(gtkgl_libs) $(libglade_libs)
-EXTRA_PROGRAMS =
+pyexecdir = $(PYTHON_SITE_EXEC)
+pyexec_LTLIBRARIES = _gtkmodule.la $(imlib_libs) $(gtkgl_libs) $(libglade_libs)
 
-_gtkmodule__SO__SOURCES = gtkmodule.c
-_gtkmodule__SO__LDADD = $(GTK_LIBS)
-_gtkmodule__SO__LINK = $(PYTHON_LINK)
+_gtkmodule_la_LDFLAGS = -module -avoid-version
+_gtkmodule_la_SOURCES = gtkmodule.c
+_gtkmodule_la_LIBADD = $(GTK_LIBS)
 
 
-_gdkimlibmodule__SO__SOURCES = gdkimlibmodule.c
-_gdkimlibmodule__SO__LDADD = $(GDK_IMLIB_LIBS)
-_gdkimlibmodule__SO__LINK = $(PYTHON_LINK)
+_gdkimlibmodule_la_LDFLAGS = -module -avoid-version
+_gdkimlibmodule_la_SOURCES = gdkimlibmodule.c
+_gdkimlibmodule_la_LIBADD = $(GDK_IMLIB_LIBS)
 
-_gtkglmodule__SO__SOURCES = gtkglmodule.c
-_gtkglmodule__SO__LDADD = $(GTKGL_LIBS) $(GTK_LIBS)
-_gtkglmodule__SO__LINK = $(PYTHON_LINK)
+_gtkglmodule_la_LDFLAGS = -module -avoid-version
+_gtkglmodule_la_SOURCES = gtkglmodule.c
+_gtkglmodule_la_LIBADD = $(GTKGL_LIBS) $(GTK_LIBS)
 
-_libglademodule__SO__SOURCES = libglademodule.c
-_libglademodule__SO__LDADD = $(LIBGLADE_LIBS)
-_libglademodule__SO__LINK = $(PYTHON_LINK)
+_libglademodule_la_LDFLAGS = -module -avoid-version
+_libglademodule_la_SOURCES = libglademodule.c
+_libglademodule_la_LIBADD = $(LIBGLADE_LIBS)
 
 pkginclude_HEADERS = pygtk.h pygdkimlib.h
 
-python_PYTHON = gtk.py Gtkinter.py GTK.py GDK.py GtkExtra.py \
+pysitedir = $(PYTHON_SITE)
+pysite_PYTHON = gtk.py Gtkinter.py GTK.py GDK.py GtkExtra.py \
 	$(imlib_mods) $(gtkgl_mods) $(libglade_mods)
 noinst_PYTHON = mkgtk.py description.py
 
