@@ -1,3 +1,3 @@
-pygladedir = $(pythondir)/pyglade
+pygladedir = $(PYTHON_SITE)/pyglade
 
 pyglade_PYTHON = __init__.py build.py style.py xmlparse.py
