@@ -1,3 +1,7 @@
+2000-04-06  James Henstridge  <james@daa.com.au>
+
+	* (lots of files): switch over to using libtool and automake-1.4a.
+
 2000-03-13  James Henstridge  <james@daa.com.au>
 
 	* pyglade/__init__.py: remove python-1.4 ni stuff, and put in a
